Basic functionality and appearance done

--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -11,7 +11,7 @@
     <div id="calculator">
         <div class="display" id="full_display">
             <div class="display" id="current_operator">+</div>
-            <div class="display" id=right_display">
+            <div class="display" id="right_display">
                 <div class="display" id="current_result">0</div>
                 <div class="display" id="current_input">0</div>
             </div>
