--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -26,10 +26,10 @@
                         <button class="key key_action" data-action="u_minus"><sup>+</sup>/<sub>-</sub></button>
                     </td>
                     <td>
-                        <button class="key key_action" data-action="del">del</button>
+                        <button class="key key_action" data-action="Backspace">del</button>
                     </td>
                     <td>
-                        <button class="key key_operator" data-action="plus">+</button>
+                        <button class="key key_operator" data-action="+">+</button>
                     </td>
                 </tr>
                 <tr>
@@ -43,7 +43,7 @@
                         <button class="key key_digit">9</button>
                     </td>
                     <td>
-                        <button class="key key_operator" data-action="minus">-</button>
+                        <button class="key key_operator" data-action="-">-</button>
                     </td>
                 </tr>
                 <tr>
@@ -57,7 +57,7 @@
                         <button class="key key_digit">6</button>
                     </td>
                     <td>
-                        <button class="key key_operator" data-action="multiply">&times;</button>
+                        <button class="key key_operator" data-action="*">&times;</button>
                     </td>
                 </tr>
                 <tr>
@@ -71,7 +71,7 @@
                         <button class="key key_digit">3</button>
                     </td>
                     <td>
-                        <button class="key key_operator" data-action="divide">&divide;</button>
+                        <button class="key key_operator" data-action="/">&divide;</button>
                     </td>
                 </tr>
                 <tr>
@@ -79,10 +79,10 @@
                         <button class="key key_digit">0</button>
                     </td>
                     <td>
-                        <button class="key key_action" data-action="decimal">.</button>
+                        <button class="key key_action" data-action=".">.</button>
                     </td>
                     <td>
-                        <button class="key key_action" data-action="calculate">=</button>
+                        <button class="key key_action" data-action="=">=</button>
                     </td>
                 </tr>
             </table>
