--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -8,12 +8,14 @@
 
 </head>
 <body>
+    <script src="scripts.js"></script>
+
     <div id="calculator">
         <div class="display" id="full_display">
             <div class="display" id="current_operator">+</div>
             <div class="display" id="right_display">
                 <div class="display" id="current_result">0</div>
-                <div class="display" id="current_input">0</div>
+                <div class="input_display_inactive" id="current_input">0</div>
             </div>
         </div>
         <div>
@@ -88,6 +90,5 @@
             </table>
         </div>
     </div>
-    <script src="scripts.js"></script>
 </body>
 </html>
