--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -22,69 +22,69 @@
             <table id="key_grid">
                 <tr>
                     <td>
-                        <button class="key key_action" data-action="clear">AC</button>
+                        <button class="key key_action" id="key_clear" data-action="clear">AC</button>
                     </td>
                     <td>
-                        <button class="key key_action" data-action="u_minus"><sup>+</sup>/<sub>-</sub></button>
+                        <button class="key key_action" id="key_u_minus" data-action="u_minus"><sup>+</sup>/<sub>-</sub></button>
                     </td>
                     <td>
-                        <button class="key key_action" data-action="Backspace">del</button>
+                        <button class="key key_action" id="key_Backspace" data-action="Backspace">del</button>
                     </td>
                     <td>
-                        <button class="key key_operator" data-action="+">+</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <button class="key key_digit">7</button>
-                    </td>
-                    <td>
-                        <button class="key key_digit">8</button>
-                    </td>
-                    <td>
-                        <button class="key key_digit">9</button>
-                    </td>
-                    <td>
-                        <button class="key key_operator" data-action="-">-</button>
+                        <button class="key key_operator" id="key_+" data-action="+">+</button>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <button class="key key_digit">4</button>
+                        <button class="key key_digit" id="key_7">7</button>
                     </td>
                     <td>
-                        <button class="key key_digit">5</button>
+                        <button class="key key_digit" id="key_8">8</button>
                     </td>
                     <td>
-                        <button class="key key_digit">6</button>
+                        <button class="key key_digit" id="key_9">9</button>
                     </td>
                     <td>
-                        <button class="key key_operator" data-action="*">&times;</button>
+                        <button class="key key_operator" data-action="-" id="key_-">-</button>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <button class="key key_digit">1</button>
+                        <button class="key key_digit" id="key_4">4</button>
                     </td>
                     <td>
-                        <button class="key key_digit">2</button>
+                        <button class="key key_digit" id="key_5">5</button>
                     </td>
                     <td>
-                        <button class="key key_digit">3</button>
+                        <button class="key key_digit" id="key_6">6</button>
                     </td>
                     <td>
-                        <button class="key key_operator" data-action="/">&divide;</button>
+                        <button class="key key_operator" data-action="*" id="key_*">&times;</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button class="key key_digit" id="key_1">1</button>
+                    </td>
+                    <td>
+                        <button class="key key_digit" id="key_2">2</button>
+                    </td>
+                    <td>
+                        <button class="key key_digit" id="key_3">3</button>
+                    </td>
+                    <td>
+                        <button class="key key_operator" data-action="/" id="key_/">&divide;</button>
                     </td>
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <button class="key key_digit">0</button>
+                        <button class="key key_digit" id="key_0">0</button>
                     </td>
                     <td>
-                        <button class="key key_action" data-action=".">.</button>
+                        <button class="key key_action" data-action="." id="key_.">.</button>
                     </td>
                     <td>
-                        <button class="key key_action" data-action="=">=</button>
+                        <button class="key key_action" data-action="=" id="key_=">=</button>
                     </td>
                 </tr>
             </table>
