--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -25,7 +25,7 @@
                         <button class="key key_action" id="key_clear" data-action="clear">AC</button>
                     </td>
                     <td>
-                        <button class="key key_action" id="key_u_minus" data-action="u_minus"><sup>+</sup>/<sub>-</sub></button>
+                        <button class="key key_action" id="key_u_minus" data-action="u_minus">+/-</button>
                     </td>
                     <td>
                         <button class="key key_action" id="key_Backspace" data-action="Backspace">del</button>
