UI changes and solved bug on Enter key from keyboard

--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -84,7 +84,7 @@
                         <button class="key key_action" data-action="." id="key_.">.</button>
                     </td>
                     <td>
-                        <button class="key key_action" data-action="=" id="key_=">=</button>
+                        <button class="key key_action" data-action="=" id="key_=" id="key_Enter">=</button>
                     </td>
                 </tr>
             </table>
