solved bug of pressing = in keyboard

--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -83,7 +83,7 @@
                         <button class="key key_action key_." data-action=".">.</button>
                     </td>
                     <td>
-                        <button class="key key_action key_Enter key_" data-action="=">=</button>
+                        <button class="key key_action key_Enter key_=" data-action="=">=</button>
                     </td>
                 </tr>
             </table>
