--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -4,90 +4,95 @@
     <title>
             Kalc
     </title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
 </head>
 <body>
-
-    <div class="calculator">
-        <div class="display full_display">
-            <div class="display current_operator">+</div>
-            <div class="display right_display">
-                <div class="display current_result">0</div>
-                <div class="input_display_inactive current_input">0</div>
+    <div id="calculators">
+        <div class="calculator" tabIndex="0">
+            <div class="display full_display">
+                <div class="display current_operator">+</div>
+                <div class="display right_display">
+                    <div class="display current_result">0</div>
+                    <div class="input_display_inactive current_input">0</div>
+                </div>
+            </div>
+            <div>
+                <table class="key_grid">
+                    <tr>
+                        <td>
+                            <button class="key key_action key_clear" data-action="clear" tabIndex="-1">AC</button>
+                        </td>
+                        <td>
+                            <button class="key key_action key_u_minus" data-action="u_minus" tabIndex="-1">+/-</button>
+                        </td>
+                        <td>
+                            <button class="key key_action key_Backspace" data-action="Backspace" tabIndex="-1">del</button>
+                        </td>
+                        <td>
+                            <button class="key key_operator key_+" data-action="+" tabIndex="-1">+</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button class="key key_digit key_7" tabIndex="-1">7</button>
+                        </td>
+                        <td>
+                            <button class="key key_digit key_8" tabIndex="-1">8</button>
+                        </td>
+                        <td>
+                            <button class="key key_digit key_9" tabIndex="-1">9</button>
+                        </td>
+                        <td>
+                            <button class="key key_operator key_-" data-action="-" tabIndex="-1">-</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button class="key key_digit key_4" tabIndex="-1">4</button>
+                        </td>
+                        <td>
+                            <button class="key key_digit key_5" tabIndex="-1">5</button>
+                        </td>
+                        <td>
+                            <button class="key key_digit key_6" tabIndex="-1">6</button>
+                        </td>
+                        <td>
+                            <button class="key key_operator key_*" data-action="*" tabIndex="-1">&times;</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button class="key key_digit key_1" tabIndex="-1">1</button>
+                        </td>
+                        <td>
+                            <button class="key key_digit key_2" tabIndex="-1">2</button>
+                        </td>
+                        <td>
+                            <button class="key key_digit key_3" tabIndex="-1">3</button>
+                        </td>
+                        <td>
+                            <button class="key key_operator key_/" data-action="/" tabIndex="-1">&divide;</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <button class="key key_digit key_0" tabIndex="-1">0</button>
+                        </td>
+                        <td>
+                            <button class="key key_action key_." data-action="." tabIndex="-1">.</button>
+                        </td>
+                        <td>
+                            <button class="key key_action key_Enter key_=" data-action="=" tabIndex="-1">=</button>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
-        <div>
-            <table class="key_grid">
-                <tr>
-                    <td>
-                        <button class="key key_action key_clear" data-action="clear">AC</button>
-                    </td>
-                    <td>
-                        <button class="key key_action key_u_minus" data-action="u_minus">+/-</button>
-                    </td>
-                    <td>
-                        <button class="key key_action key_Backspace" data-action="Backspace">del</button>
-                    </td>
-                    <td>
-                        <button class="key key_operator key_+" data-action="+">+</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <button class="key key_digit key_7">7</button>
-                    </td>
-                    <td>
-                        <button class="key key_digit key_8">8</button>
-                    </td>
-                    <td>
-                        <button class="key key_digit key_9">9</button>
-                    </td>
-                    <td>
-                        <button class="key key_operator key_-" data-action="-">-</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <button class="key key_digit key_4">4</button>
-                    </td>
-                    <td>
-                        <button class="key key_digit key_5">5</button>
-                    </td>
-                    <td>
-                        <button class="key key_digit key_6">6</button>
-                    </td>
-                    <td>
-                        <button class="key key_operator key_*" data-action="*">&times;</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <button class="key key_digit key_1">1</button>
-                    </td>
-                    <td>
-                        <button class="key key_digit key_2">2</button>
-                    </td>
-                    <td>
-                        <button class="key key_digit key_3">3</button>
-                    </td>
-                    <td>
-                        <button class="key key_operator key_/" data-action="/">&divide;</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <button class="key key_digit key_0">0</button>
-                    </td>
-                    <td>
-                        <button class="key key_action key_." data-action=".">.</button>
-                    </td>
-                    <td>
-                        <button class="key key_action key_Enter key_=" data-action="=">=</button>
-                    </td>
-                </tr>
-            </table>
-        </div>
+    </div>
+    <div id="new_element">
+        <button id="new_button">+</button>
     </div>
 </body>
 </html>
