form, default eventlisteners added

--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -94,5 +94,12 @@
     <div id="new_element">
         <button id="new_button">+</button>
     </div>
+    <div id="form_example_div">
+        <form id="form" action="">
+            <label for="count">Count:</label>
+            <input type="number" id="count" name="count" min="1">
+            <input type="submit">
+        </form>
+    </div>
 </body>
 </html>
