--- a/Kalc/index.html
+++ b/Kalc/index.html
@@ -5,6 +5,8 @@
             Kalc
     </title>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet'>
+
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
 </head>
